--- a/program1-1.html
+++ b/program1-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First CIT 160 Assignment</title>
+    <title>First CIT 160 Assignment Attempt</title>
 </head>
 <body>
 
