added first assignment

--- a/Scripts/index.html
+++ b/Scripts/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <h1>Annmarie Worthington</h1>
-    <img src=""
+    <img src=""/>
+    <h2>Assignments</h2>
+    <ul>
+        <li><a href"https://annmarieinlr.github.io/program1-1"></Program1-1></a></li>
+    </ul>
 </body>
 </html>
