--- a/Scripts/index.html
+++ b/Scripts/index.html
@@ -12,7 +12,7 @@
     <img src=""/>
     <h2>Assignments</h2>
     <ul>
-        <li><a href"https://annmarieinlr.github.io/program1-1">Program 1-1</a></li>
+        <li><a href="https://annmarieinlr.github.io/program1-1" target="_blank">Program 1-1</a></li>
     </ul>
 </body>
 </html>
