--- a/Scripts/index.html
+++ b/Scripts/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Annmarie Worthington</h1>
-    <img src="images/profile.jpg"/>
+    <center><img src="images/profile.jpg" alt="Profile Picture"/></center>
     <h2>Assignments</h2>
     <ul>
         <li><a href="https://annmarieinlr.github.io/program1-1" target="_blank">Program 1-1</a></li>
