--- a/template.html
+++ b/template.html
@@ -8,7 +8,7 @@
 </head>
 <header>
 	<h1>Week 4: Add Two Numbers</h1>
-	<h2>Student Name</h2>
+	<h2>Annmarie Worthington</h2>
 </header>
 <main>
 	<h3>Add Two Numbers</h3>
