--- a/template.html
+++ b/template.html
@@ -16,7 +16,8 @@
   <label>Enter Number Two: <input type="text" id="number2"></label>
 	<label><button onclick="addNumbers()">Add Numbers</button></label>
 	<hr>
-	<p><span id="output"></span></p>
+    <p><span id="output"></span></p>
+    <p>number1 + number2</p>
 </main>
 <footer>
 	&copy;2019 &bull; Student Name &bull; BYU-Idaho &bull; CIT 160
