--- a/Scripts/index.html
+++ b/Scripts/index.html
@@ -13,6 +13,7 @@
     <h2>Assignments</h2>
     <ul>
         <li><a href="https://annmarieinlr.github.io/program1-1" target="_blank">Program 1-1</a></li>
+        <li><a href="https://annmarieinlr.github.io/template.html" target="_bland">Template.html</a></li>
     </ul>
 </body>
 </html>
