--- a/program4-1.html
+++ b/program4-1.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="template-style.css">
     <script src="script.js"></script>
     <title>First CIT 160 Assignment Attempt</title>
 </head>
-<body>
-
-<h2>My First JavaScript</h2>
-
-<button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
-Click me to display Date and Time.</button>
-
-<p id="demo"></p>
-
-</body>
-</html> 
+<header>
+	<h1>Week 4: Add Two Numbers</h1>
+	<h2>Annmarie Worthington</h2>
+</header>
+<main>
+	<h3>Add Two Numbers</h3>
+	<label>Enter Number One: <input type="text" id="number1"></label>
+  <label>Enter Number Two: <input type="text" id="number2"></label>
+	<label><button onclick="addNumbers()">Add Numbers</button></label>
+	<hr>
+    <p><span id="output"></span></p>
+    
+</main>
+<footer>
+	&copy;2019 &bull; Student Name &bull; BYU-Idaho &bull; CIT 160
+</footer>
