--- a/program4-1.html
+++ b/program4-1.html
@@ -21,5 +21,5 @@
     
 </main>
 <footer>
-	&copy;2020 &bull; Student Name &bull; BYU-Idaho &bull; CIT 160
+	&copy;2020 &bull; Annmarie Worthington &bull; BYU-Idaho &bull; CIT 160
 </footer>
