--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="template-style.css">
+    <link rel="stylesheet" href="css/template-style.css">
     <title>Practice Home Page</title>
    
 </head>
