--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <h2>Assignments</h2>
     <ul>
         <li><a href="https://annmarieinlr.github.io/program1-1" target="_blank">Program 1-1</a></li>
-        <li><a href="https://annmarieinlr.github.io/template.html" target="_bland">Template.html</a></li>
+        <li><a href="https://annmarieinlr.github.io/template.html" target="_blank">Template.html</a></li>
+        <li><a href="https://annmarieinlr.github.io/program4-1.html" target="_blank">Program 4-1</a></li>
+        <li><a href="https://annmarieinlr.github.io/poundsToKilograms.html" target="_blank">Converting Pounds to Kilograms</a></li>
+        <li><a href="https://annmarieinlr.github.io/Celcius - Farenheit.html" target="_blank"></a></li>
     </ul>
 </body>
 </html>
