--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="https://annmarieinlr.github.io/template.html" target="_blank">Template.html</a></li>
         <li><a href="https://annmarieinlr.github.io/program4-1.html" target="_blank">Program 4-1</a></li>
         <li><a href="https://annmarieinlr.github.io/poundsToKilograms.html" target="_blank">Converting Pounds to Kilograms</a></li>
-        <li><a href="https://annmarieinlr.github.io/Celcius - Farenheit.html" target="_blank"></a></li>
+        <li><a href="https://annmarieinlr.github.io/Celcius - Farenheit.html" target="_blank">Converting Celcius to Farenheit</a></li>
     </ul>
 </body>
 </html>
