--- a/alarm.html
+++ b/alarm.html
@@ -12,7 +12,7 @@
 	<h2>Annmarie Worthington</h2>
 </header>
 <main>
-    <h3>Do you need to get up?</h3>
+    <h3>Do you need to get up today?</h3>
 	
 	<label><button onclick="alarmCheck()">Check Alarm</button></label>
 	<hr>
