--- a/discount.html
+++ b/discount.html
@@ -8,7 +8,7 @@
    
 </head>
 <header>
-	<h1>Week 7: Discount Days</h1>
+	<h1>Week 7: Discount Days Computation</h1>
 	<h2>Annmarie Worthington</h2>
 </header>
 <main>
