--- a/sumOdds.html
+++ b/sumOdds.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/template-style.css">
-    <title>Practice Home Page</title>
+    <title>Sum Odd Numbers</title>
    
 </head>
 <header>
@@ -22,7 +22,7 @@
     <script src="js/sumOdd.js"></script>
 </main>
 <footer>
-	&copy;2019 &bull; Student Name &bull; BYU-Idaho &bull; CIT 160
+	&copy;2020 &bull; Annmarie Worthington &bull; BYU-Idaho &bull; CIT 160
 </footer>
 
 </html>
