--- a/fiveTimes.html
+++ b/fiveTimes.html
@@ -21,4 +21,7 @@
             document.getElementById('times').innerHTML = text;
         </script>
     </main>
+    <footer>
+        &copy;2020 &bull; Annmarie Worthington &bull; BYU-Idaho &bull; CIT 160
+    </footer>
 </html>
