--- a/windChill.html
+++ b/windChill.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Wind Chill</title>
     <body>
+        <h1>Calculating Windchill</h1>
         <label>Temperature: <input type="text" id="tempF" size="5"></label><br>
         <p></p>
         <label>Wind Speed: <input type="text" id="speed" size="5"></label><br>
