--- a/invest.html
+++ b/invest.html
@@ -11,6 +11,12 @@
     <label>Periods per Year <input type="text" id="periods"></label><br>
     <p></p>
     <button type="button" onclick="doFV()">Compute Future Value</button><br>
-
+    <p></p>
+    <div id="output"></div>
+    <script src="js/invest.js"></script>
  </body>
+ <footer>
+   <p></p>
+   &copy;2020 &bull; Annmarie Worthington &bull; BYU-Idaho &bull; CIT 160
+</footer>
 </html>
